Initialize project using Create React App

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "proyecto_final_daw_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,18 +9,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "socket.io": "^4.7.2",
-    "mysql": "^2.18.1",
-    "http": "^0.0.1-security",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app/node_modules/.bin/react-scripts start",
-    "build": "react-app/node_modules/.bin/react-scripts build",
-    "test": "react-app/node_modules/.bin/react-scripts test",
-    "eject": "react-app/node_modules/.bin/react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
