--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
