--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
+    "easing-coordinates": "^2.0.2",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "leva": "^0.9.35",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
