Actualizado master_plazzy.yml para que actualice la página por cada commit de produccion en vez de master

--- a/.github/workflows/master_plazzy.yml
+++ b/.github/workflows/master_plazzy.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - plazzy
 on:
   push:
     branches:
-      - master
+      - produccion
   workflow_dispatch:
 
 jobs:
